--- a/templates/base.html
+++ b/templates/base.html
@@ -9,11 +9,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+
+    <link type="text/css" href="{{ url_for('static', filename='styles.css')}}" rel="stylesheet" />
     <title>Хранилище документов</title>
   </head>
   <body>
-  <div>
-      {% block content %}{% endblock %}
-  </div>
+    <div>
+        {% block content %}{% endblock %}
+    </div>
   </body>
 </html>
