decorators with exceptions

--- a/templates/error.html
+++ b/templates/error.html
@@ -2,6 +2,7 @@
 
 {% block content %}
   <h1>Ошибка!</h1>
+  <h2>Произошла непредвиденная ошибка</h2>
   {% if error %}
     <p><strong>Описание:</strong></p>
     <p>
