--- a/templates/doc.html
+++ b/templates/doc.html
@@ -9,7 +9,7 @@
     <p><strong>Содержание:</strong></p>
     <p>{{ doc.content }}</p><br><br>
   </div>
-  <a href="{{ url_for('update_doc', doc_id=doc.id) }}">Изменить документ</a><br><br>
+  <a href="{{ url_for('save_doc', doc_id=doc.id) }}">Изменить документ</a><br><br>
   <a href="{{ url_for('archiv_for_doc', doc_id=doc.id) }}">Просмотреть историю</a><br><br>
 
   <a href="{{ url_for('compare_doc_major', doc_id=doc.id) }}">Сравнить с последней</a><br>
