--- a/templates/doc_list.html
+++ b/templates/doc_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Список документов</h1>
-    <a href="{{ url_for('new_doc') }}">Добавить новый</a>
+    <a href="{{ url_for('save_doc') }}">Добавить новый</a>
     <ul>
         {% for doc in docs %}
             <li><a href="{{ url_for('get_doc', doc_id=doc.id) }}">{{ doc.title }}</a></li>
